(bugFix): fix inconsistent layout issue for 'HireMeDownloadCvButtons' Component

--- a/src/index.css
+++ b/src/index.css
@@ -577,7 +577,8 @@ button {
   .home-info p {
     text-align: center;
   }
-  .home-info button {
+  .home-info button,
+  .home-info a {
     margin: 0 auto;
     display: flex;
     align-items: center;
